finished contact_info edit page

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAseHqrJFA-aViTv2XAGYNDS8baX5Hc7FQ&libraries=places&callback=initAutocomplete"
+      async
+      defer
+    ></script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
